<resources>
    <string name="app_name">Fragment Example</string>
    <string name="article">Android is a mobile operating system developed by Google. It is based on a modified version of the Linux kernel and other open source software, and is designed primarily for touchscreen mobile devices such as smartphones and tablets. In addition, Google has developed Android TV for televisions, Android Auto for cars, and Wear OS for wrist watches, each with a specialized user interface. Variants of Android are also used on game consoles, digital cameras, PCs and other electronics.</string>
    <string name="title">Android (operating system)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yes_message">ARTICLE: Like</string>
    <string name="no_message">ARTICLE: Thanks</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="open">Feedback</string>
    <string name="close">Close</string>
</resources>
